{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 13,
  "lineage": "7e2bdbfb-ead2-e5e1-8d7c-6177a21326f4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423343077:internet-gateway/igw-00454af78bf9613e4",
            "id": "igw-00454af78bf9613e4",
            "owner_id": "637423343077",
            "tags": {
              "Name": "Node-HelloWorld-igw"
            },
            "tags_all": {
              "Name": "Node-HelloWorld-igw"
            },
            "vpc_id": "vpc-0bc9abdbb43ef833f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423343077:route-table/rtb-0d194983a0dc57b26",
            "id": "rtb-0d194983a0dc57b26",
            "owner_id": "637423343077",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00454af78bf9613e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Node-HelloWorld-public-rt"
            },
            "tags_all": {
              "Name": "Node-HelloWorld-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc9abdbb43ef833f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039aed60df4e31f60",
            "route_table_id": "rtb-0d194983a0dc57b26",
            "subnet_id": "subnet-08296dd89befaa233"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05357cbcd03076ba6",
            "route_table_id": "rtb-0d194983a0dc57b26",
            "subnet_id": "subnet-0264f094fc9258794"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423343077:security-group/sg-0cb985bbfbc209d82",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb985bbfbc209d82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "terraform-20240609201227340600000001",
            "name_prefix": "terraform-",
            "owner_id": "637423343077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Node-HelloWorld-sg"
            },
            "tags_all": {
              "Name": "Node-HelloWorld-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc9abdbb43ef833f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423343077:subnet/subnet-08296dd89befaa233",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08296dd89befaa233",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423343077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Node-HelloWorld-public-subnet-1"
            },
            "tags_all": {
              "Name": "Node-HelloWorld-public-subnet-1"
            },
            "vpc_id": "vpc-0bc9abdbb43ef833f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423343077:subnet/subnet-0264f094fc9258794",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0264f094fc9258794",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423343077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Node-HelloWorld-public-subnet-2"
            },
            "tags_all": {
              "Name": "Node-HelloWorld-public-subnet-2"
            },
            "vpc_id": "vpc-0bc9abdbb43ef833f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423343077:vpc/vpc-0bc9abdbb43ef833f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a379ecb1bb404449",
            "default_route_table_id": "rtb-07c8120ab066282c2",
            "default_security_group_id": "sg-07c2a596e12b4fbb5",
            "dhcp_options_id": "dopt-0bfb77d52146bf4bc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc9abdbb43ef833f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c8120ab066282c2",
            "owner_id": "637423343077",
            "tags": {
              "Name": "Node-HelloWorld-vpc"
            },
            "tags_all": {
              "Name": "Node-HelloWorld-vpc"
            }
          }
        }
      ]
    }
  ]
}